--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:paddingTop="20dp"
+        android:paddingTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/blue"
+        android:paddingBottom="10dp"
         android:orientation="horizontal" >
 
         <ImageView
@@ -17,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@mipmap/ic_launcher" />
+            android:background="@drawable/ic_drawer" />
 
         <TextView
             android:id="@+id/appname"
@@ -27,7 +28,7 @@
             android:gravity="center"
             android:paddingRight="40dp"
             android:text="Irish Grammar"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="26sp" />
     </LinearLayout>
 
@@ -42,9 +43,8 @@
 
         <FrameLayout
             android:id="@+id/content_frame"
-
             android:background="@drawable/gradient"
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"/>
 
@@ -52,11 +52,11 @@
 
         <ExpandableListView
             android:id="@+id/lvExp"
-            android:layout_width="match_parent"
-            android:paddingRight="10dp"
+            android:layout_width="220dp"
+            android:paddingRight="2dp"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:background="@color/white" >
+            android:background="@color/lightgrey" >
         </ExpandableListView>
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
