--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -8,16 +8,16 @@
     <TextView
         android:layout_gravity="center_vertical"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/red"
+        android:textStyle="normal"
         android:id="@+id/lblListHeader"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-
         android:gravity="center_vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
-        android:paddingRight="40dp"
+        android:paddingRight="20dp"
         />
     <View
         android:layout_width="fill_parent"
