--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -43,7 +43,7 @@
 
         <FrameLayout
             android:id="@+id/content_frame"
-            android:background="@drawable/gradient"
+            android:background="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"/>
