--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        >
+        android:background="@drawable/gradient">
 
         <ImageView
             android:layout_width="wrap_content"
