--- a/app/src/main/res/layout/whatmakesthisdifferent_layout.xml
+++ b/app/src/main/res/layout/whatmakesthisdifferent_layout.xml
@@ -1,21 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-        <TextView
-        android:layout_width="wrap_content"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="What Makes This Guide Different?"
-        android:textColor="@color/red"
-        android:id="@+id/textView2"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-</LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="What Makes This Guide Different?"
+            android:textColor="@color/red"
+            android:id="@+id/textView2"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp" />
+    </LinearLayout>
+</ScrollView>
