--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -10,4 +10,5 @@
     <color name="lightestgrey">#E5E5E5</color>
     <color name="lightgrey">#D3D3D3</color>
     <color name="darkgrey">#BDBDBD</color>
+    <color name="fade_drawer">#99000000</color>
 </resources>
