--- a/app/src/main/res/layout/whatmakesthisdifferent_layout.xml
+++ b/app/src/main/res/layout/whatmakesthisdifferent_layout.xml
@@ -1,6 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@ android:layout_height="fill_parent"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="What Makes This Guide Different?"
+            android:text="What Makes This Different?"
             android:textColor="@color/red"
             android:id="@+id/textView2"
             android:textStyle="bold"
@@ -27,5 +27,24 @@ android:layout_height="fill_parent"
             android:background="@android:color/darker_gray"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Header"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Body\nBody\nBody\nBody"/>
     </LinearLayout>
 </ScrollView>
