--- a/app/src/main/res/layout/languagetips_layout.xml
+++ b/app/src/main/res/layout/languagetips_layout.xml
@@ -32,10 +32,10 @@
 
     <TableLayout
         android:id="@+id/table"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp">
+        android:layout_margin="15dp">
 
         <TableRow
             android:id="@+id/tableRow1"
